# nb-feed-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
__schemas__/: FeedConfigFile.json
bot/: config.py  discord.py  feed.py  models.py  opengraph.py  storage.py  tasks.py
sources/: .gitignore  _template.yml
