[tool.poetry]
name = "nb-feed-bot"
version = "0.1.0"
description = ""
authors = ["Windsdon <winds@windsdon.com>"]
readme = "README.md"
packages = [{ include = "nb_feed_bot" }]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }
celery = { extras = ['redis'], version = '^5.2.7' }
"discord.py" = "^2.2.2"
opengraph_py3 = "0.71"
requests = "^2.28.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
